multi_v7_defconfig/Kerr
++Distclean++
++build defconfig multi_v7_defconfig++
++build kernel ++
drivers/clocksource/timer-atmel-pit.c: In function 'at91sam926x_pit_dt_init':
drivers/clocksource/timer-atmel-pit.c:264:2: error: 'ret' undeclared (first use in this function)
  ret = clk_prepare_enable(data->mck);
  ^
drivers/clocksource/timer-atmel-pit.c:264:2: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [drivers/clocksource/timer-atmel-pit.o] Error 1
make[1]: *** [drivers/clocksource] Error 2
make: *** [drivers] Error 2
make: *** Waiting for unfinished jobs....
Mon Aug 29 01:09:56 CDT 2016: Build result = 1
